<resources>
    <string name="app_name">共享</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="unlock">输码解密</string>
    <string name="wallet">支付解锁</string>
    <string name="route">我的密码</string>
    <string name="invite_friend">邀请好友</string>
    <string name="feedback">联系我们/合作加盟</string>
    <string name="guide">版本更新</string>
    <string name="setting">设置</string>
    <string name="version">V1.0.0</string>
    <string name="phone">手机号码</string>
    <string name="passWord">输入密码</string>
    <string name="registerBtn">注册</string>
    <string name="login">登录</string>
    <string name="click_to_skip">跳过</string>
    <string name="gdtslogan">共享密钥</string>
    <string name="code_prompt">在车锁和车头位置，已有车辆编码</string>
    <string name="unlock_im">立即解密</string>
    <string name="save">保存密码</string>
    <string name="notify">好消息！！！！开锁王强势入驻！不要理会押金，不要一分钱，全国任意骑！未更新为最新版本，请点击下载更新\n http://pan.baidu.com/s/1dEJQO3B</string>
    <string name="code_password">输入密码，以便下次使用</string>
    <string name="errormsg"><![CDATA[>>呜呜，没有该数据哦！小哥正在抓紧备货。。。下个版本将推出你骑车小哥买单优惠活动，敬请期待\n再或者可以直接找开锁王开锁<<]]></string>
    <string name="feedwork">点击办证</string>
    <string name="contants">QQ2939667786\n微信A135610529</string>
    <string name="account_ballance"><![CDATA[账户余额&#160;0&#160;元]]></string>
    <string name="transaction_type">请选择交易类型</string>
    <string name="charge_im">马上付款</string>
    <string name="notice">12周岁以下儿童禁止骑车！</string>
    <string name="tip">（找办证员确认之后\n   再支付，谨防骗子）</string>
    <string name="pay">打赏</string>
    <string name="payforme">一毛也是爱，您的支持是我们前行的动力！</string>
    <string name="square">广场</string>
    <string-array name="amount">
        　　        <item>0.1元</item>
        　　        <item>0.3元</item>
        　　        <item>0.5元</item>
        　　        <item>1.0元</item>
        　　        <item>5.0元</item>
        　　        <item>10.0元</item>
    </string-array>
</resources>
