<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/menu_bg"
   >
    <LinearLayout
        android:clickable="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/person_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_photo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@mipmap/img_iapp"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/user_photo">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OFO"
                    android:padding="5dp"
                    android:textColor="@color/color_f2f2f2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:text="13229100502"
                    android:padding="5dp"
                    android:textColor="@color/color_f2f2f2"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <LinearLayout
                style="@style/menu_layout_style"
                android:onClick="gotoWallet">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/wallet" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/wallet" />
                <TextView
                    style="@style/menu_text_style"
                    android:textColor="@color/red"
                    android:textSize="11sp"
                    android:layout_gravity="center"
                    android:text="@string/tip" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

            <LinearLayout style="@style/menu_layout_style"
                android:onClick="gotoWork">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/feedback" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/feedwork" />

                <TextView
                    style="@style/menu_text_style"
                    android:textSize="11sp"
                    android:layout_gravity="top"
                    android:text="@string/contants" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />



            <LinearLayout
                style="@style/menu_layout_style"
                android:onClick="gotoMyRoute">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/route" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/route" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

            <LinearLayout style="@style/menu_layout_style"
                android:onClick="gotoInvite">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/invite_friend" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/invite_friend" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

            <LinearLayout style="@style/menu_layout_style"
                android:onClick="gotoFeedBack">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/feedback" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/feedback" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

            <LinearLayout style="@style/menu_layout_style"
                android:onClick="gotoUpate">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/guide" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/guide"
                    android:drawablePadding="5dp" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/version"
                    android:id="@+id/tv_version"
                    android:textSize = "12sp"
                    android:layout_weight="1"/>
                <TextView
                    style="@style/menu_text_style"
                    android:layout_gravity="top"
                    android:id="@+id/version_notify"
                    android:drawablePadding="5dp"
                    android:visibility="gone"
                    android:drawableRight="@drawable/shape_red_notify"/>

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

            <LinearLayout style="@style/menu_layout_style"
                android:onClick="gotoSetting">

                <ImageView
                    style="@style/menu_icon_style"
                    android:src="@mipmap/setting" />

                <TextView
                    style="@style/menu_text_style"
                    android:text="@string/setting" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView style="@style/menu_right_arrow_style" />
            </LinearLayout>

            <View style="@style/menu_divider_style" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>

