<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f4f3f3"
    android:orientation="vertical"
    android:layout_below="@+id/title_layout"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/edge_shadow_bg"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btn_light"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/flashlight_circle_bg"
            android:src="@mipmap/flashlight_icon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/numView"
                android:gravity="center"
                android:hint="输入车牌号码"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:text="@string/code_prompt"
            android:textColor="@color/black_dd"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <cn.zhiao.baselib.utils.gridpassword.GridPasswordView
                android:id="@+id/pswView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:gpvTextColor="#2196F3"
                app:gpvTextSize="25sp"
                app:gpvLineColor="#2196F3"
                app:gpvPasswordLength="4"
                app:gpvPasswordType="number"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/code_password"
            android:textColor="@color/black_dd"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_book_selector"
            android:text="@string/save"
            android:textColor="@color/white_dd"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>